# langgraph-ai-agent-service-examples

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
ch02-getting-started/: .env.example  .gitignore  README.md  app.py  app_simple.py  pyproject.toml
ch02-getting-started/src/: app.py
ch02-getting-started/src/my_agent/: __init__.py  agent.py  config.py
ch03-langchain-basics/: .env.example  README.md  app.py  page.py  pyproject.toml
ch03-langchain-basics/prompts/: cons_subject.yaml  pros_subject.yaml
ch03-langchain-basics/src/qa_chatbot/: __init__.py  chain.py  config.py  prompts.py
ch04-prompt-engineering/: README.md  pyproject.toml  run_cot.py  run_email_summary.py  run_persona.py
ch04-prompt-engineering/prompts/: email_summary.yaml  persona_with_tone.yaml  with_cot.yaml
ch04-prompt-engineering/src/prompt_engineering/: __init__.py
ch05-rag/: .env.example  .gitignore  README.md  app.py  docker-compose.yml  page.py  pyproject.toml
ch05-rag/src/rag_agent/: __init__.py  agentic_rag.py  config.py  document.py  embeddings.py  indexer.py  rag_chain.py  reranker.py  search.py
ch06-memory/: .gitignore  README.md  app.py  page.py  pyproject.toml
ch06-memory/src/chatbot/: __init__.py  chain.py  config.py
ch07-tool-mcp/: README.md  app.py  page.py  pyproject.toml
ch07-tool-mcp/examples/: run_mcp_local.py
ch07-tool-mcp/mcp_server_example/: hr_server.py
ch07-tool-mcp/src/hr_assistant/: __init__.py  chain.py  data.py  mcp_integration.py  tools.py
ch08-structured-output/: .gitignore  README.md  app.py  page.py  pyproject.toml
ch08-structured-output/src/info_extractor/: __init__.py  extractor.py  schemas.py
ch09-langgraph/: README.md  app.py  page.py  pyproject.toml
ch09-langgraph/src/hr_router/: __init__.py  config.py  graph.py  nodes.py  state.py
ch10-single-agent/: .env.example  README.md  app.py  page.py  pyproject.toml
ch10-single-agent/src/hr_agent/: __init__.py  agent.py  config.py  tools.py
ch11-multi-agent/: README.md  app.py  page.py  pyproject.toml
ch11-multi-agent/src/hr_team/: __init__.py  agents.py  supervisor.py  tools.py
ch13-evaluation/: .env.example  .gitignore  README.md  app.py  page.py  pyproject.toml
ch13-evaluation/examples/: run_ragas_batch.py
ch13-evaluation/src/eval_agent/: __init__.py  config.py  evaluation.py  langfuse_setup.py  rag_chain.py  ragas_eval.py
shared/: __init__.py  navigation.py  styles.py  utils.py
