[project]
name = "rag-agent"
version = "0.1.0"
description = "AI 에이전트 개발 기술서 - 5장 RAG 실습 프로젝트"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "AI Agent Book", email = "example@example.com" }]
keywords = ["ai", "agent", "rag", "langchain", "langgraph", "opensearch"]

dependencies = [
    "langchain>=1.2.7",
    "langchain-core>=1.2.7",
    "langchain-openai>=1.1.7",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=0.4.1",
    "langgraph>=1.0.7",
    # OpenSearch
    "opensearch-py>=2.4.0",
    # 임베딩 및 리랭킹
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    # 설정 관리
    "python-dotenv>=1.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    # 웹 UI
    "streamlit>=1.52.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.8",
    "mypy>=1.19.0",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_agent"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = false
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langgraph.*",
    "streamlit.*",
    "opensearchpy.*",
    "sentence_transformers.*",
]
ignore_missing_imports = true
