[project]
name = "ch06-memory"
version = "0.1.0"
description = "Chapter 8: 대화 메모리 챗봇 예제"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.1.3",
    "langchain-core>=1.1.3",
    "langchain-openai>=1.1.1",
    "streamlit>=1.52.1",
    "python-dotenv>=1.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chatbot"]
