[project]
name = "ch06-memory"
version = "0.1.0"
description = "Chapter 8: 대화 메모리 챗봇 예제"
requires-python = ">=3.13"
dependencies = [
    # LangChain 핵심 (책 2장 기준)
    "langchain>=1.2.7",
    "langchain-core>=1.2.7",
    "langchain-openai>=1.1.7",
    "streamlit>=1.52.1",
    "python-dotenv>=1.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chatbot"]
