[project]
name = "ch07-tool-mcp"
version = "0.1.0"
description = "Chapter 9: HR 정책 어시스턴트 + 도구 (연차 조회, 정책 검색, 휴가 신청)"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.25",
    "langchain-core>=0.3.61",
    "langchain-openai>=0.3.18",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hr_assistant"]
