[project]
name = "info-extractor"
version = "0.1.0"
description = "AI 에이전트 개발 기술서 - 10장 구조화된 출력 실습 프로젝트"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "langchain>=1.1.3",
    "langchain-core>=1.1.3",
    "langchain-openai>=1.1.1",
    "python-dotenv>=1.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "streamlit>=1.52.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.8",
    "mypy>=1.19.0",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/info_extractor"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false

[[tool.mypy.overrides]]
module = ["langchain.*", "streamlit.*"]
ignore_missing_imports = true
