[project]
name = "info-extractor"
version = "0.1.0"
description = "AI 에이전트 개발 기술서 - 8장 구조화된 출력 실습 프로젝트"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

dependencies = [
    "langchain>=1.2.7",
    "langchain-core>=1.2.7",
    "langchain-openai>=1.1.7",
    "python-dotenv>=1.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "streamlit>=1.52.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.8",
    "mypy>=1.19.0",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/info_extractor"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = false

[[tool.mypy.overrides]]
module = ["langchain.*", "streamlit.*"]
ignore_missing_imports = true
