[project]
name = "ch09-langgraph"
version = "0.1.0"
description = "Chapter 11: HR 요청 라우터 (LangGraph 조건부 워크플로우)"
requires-python = ">=3.13"
dependencies = [
    # LangChain 핵심 (책 2장 기준)
    "langchain>=1.2.7",
    "langchain-core>=1.2.7",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hr_router"]
