[project]
name = "eval-agent"
version = "0.1.0"
description = "AI 에이전트 개발 기술서 - 15장 평가와 퀄리티 실습 프로젝트"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AI Agent Book", email = "example@example.com" }]
keywords = ["ai", "agent", "rag", "langchain", "langfuse", "evaluation"]

dependencies = [
    # LangChain 핵심 (2025.12 기준)
    "langchain>=1.1.3",
    "langchain-core>=1.1.3",
    "langchain-openai>=1.1.1",
    "langchain-community>=0.4.1",
    # Langfuse 관찰성 (SDK v3, OpenTelemetry 기반)
    "langfuse>=3.0.0",
    # 벡터 저장소 (간단한 예제용)
    "faiss-cpu>=1.7.0",
    # 설정 관리
    "python-dotenv>=1.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    # 웹 UI
    "streamlit>=1.52.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.8",
    "mypy>=1.19.0",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eval_agent"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langfuse.*",
    "streamlit.*",
    "faiss.*",
]
ignore_missing_imports = true
